# direct-marker-tracking

./: CMakeLists.txt  DirectMarkerTrackingController.cpp  DirectMarkerTrackingController.h  DirectMarkerTrackingTool.cpp  DirectMarkerTrackingTool.h  README.md  RegisterTypes_osimPlugin.cpp  RegisterTypes_osimPlugin.h  TaskSpaceController.cpp  TaskSpaceController.h  TaskSpaceMarkerTask.cpp  TaskSpaceMarkerTask.h  TaskSpaceTask.cpp  TaskSpaceTask.h  double_pendulum.osim  double_pendulum_tracker_setup.xml  gait2354_tracker_setup.xml  markers.trc  subject01_walk1_grf.xml  subject01_walk1_reduced.trc  tracker.cpp
